making final edits prior to making a gh-page commit

--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,8 @@
 <div id="list-box">
 <h2>Sailing Quiz</h2>
 
+<h2 id="currentQuestion"></h2>
+
 <ul id="question">
 
 </ul>
@@ -32,15 +34,15 @@
 </ul>
   
 <input type="submit" id="submit" value="Submit"/>
-<input type="button" id="resetGame" value="New Game"/>
+<input type="button" id="resetQuiz" value="New Game"/>
 <!-- <input type="button" id="clear-all" value="clear all"/>
 <input type="button" id="clear-selected" value="clear selected"/> -->
 </form>
-<p>correct answers:</p>
+<p>Correct answers:</p>
 <ul id="correctAnswers">
 
 </ul>
-
+<p>Incorrect answers:</p>
 <ul id="incorrectAnswers">
 
 </ul>
