making some final code changes before push

--- a/quiz.html
+++ b/quiz.html
@@ -34,7 +34,7 @@
 </ul>
   
 <input type="submit" id="submit" value="Submit"/>
-<input type="button" id="resetQuiz" value="New Game"/>
+<input type="button" id="resetQuiz" value="Reset Quiz"/>
 <!-- <input type="button" id="clear-all" value="clear all"/>
 <input type="button" id="clear-selected" value="clear selected"/> -->
 </form>
